# igorskis-tube-with-out-frontend

./: .gitignore  LICENSE
backend/: pyproject.toml
backend/backend/: settings.py
